# datalock

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  datalock_colab_v101.ipynb  datalock_dlk_demo.ipynb  doc_datalock.md  doc_dlk_archive.md  llms.txt  logus_compat.py  manual_dlk.md  pyproject.toml
datalock/: __init__.py  _defaults.py  _logus_compat.py  analytics.py  asymmetric.py  canary.py  check.py  cli.py  contract.py  core.py  dlk.py  expr.py  io_big.py  ipc_index.py  lineage.py  link.py  privacy_score.py  processor.py  scan_directory.py  secure_file.py  sql_transpiler.py  validate.py  viewer.py
datalock/adapters/: __init__.py  db_adapter.py  pandas_adapter.py  polars_adapter.py  sql_adapter.py
datalock/detectors/: fast_scan.py  pii_detector.py  sensitive_detector.py  text_detector.py
datalock/generators/: __init__.py  synthetic.py  tabular_generative.py
datalock/maskers/: date_masker.py  hashing.py  text_masker.py  truncation.py
datalock/metrics/: fidelity.py  risk_score.py  tcloseness.py
datalock/mockers/: __init__.py  numeric_mocker.py
datalock/reports/: __init__.py  audit_report.py  compliance_report.py
datalock/utils/: salt.py
logus-1.1.1/: .cursorrules  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  llms.txt  pyproject.toml
logus-1.1.1/.github/: copilot-instructions.md
logus-1.1.1/logus/: __init__.py  _defaults.py  analytics.py  asymmetric.py  check.py  cli.py  contract.py  core.py  expr.py  io_big.py  lgs.py  lineage.py  link.py  privacy_score.py  processor.py  secure_file.py  sql_transpiler.py  validate.py
logus-1.1.1/logus/adapters/: db_adapter.py  pandas_adapter.py  polars_adapter.py  sql_adapter.py
logus-1.1.1/logus/detectors/: __init__.py  fast_scan.py  pii_detector.py  sensitive_detector.py  text_detector.py
logus-1.1.1/logus/generators/: identity_mocker.py  tabular_generative.py
logus-1.1.1/logus/maskers/: __init__.py  hashing.py  text_masker.py
logus-1.1.1/logus/metrics/: __init__.py  differential_privacy.py  kanonymity.py  tcloseness.py  utility.py
logus-1.1.1/logus/mockers/: category_mocker.py
logus-1.1.1/logus/reports/: audit_report.py  compliance_report.py
logus-1.1.1/logus/utils/: __init__.py  frames.py  salt.py  secret_str.py
logus-1.1.1/tests/: test_smoke.py  test_v105.py
tests/: test_column_pruning.py  test_smoke.py  test_v105.py
