[project.urls]
Homepage = "https://github.com/py-datalock/datalock"
Documentation = "https://github.com/py-datalock/datalock#readme"
Changelog = "https://github.com/py-datalock/datalock/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/py-datalock/datalock"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datalock"
version = "1.0.1"
description = "Privacy-by-Design para dados tabulares — LGPD compliance em Python."
readme = "README.md"
license = { text = "GNU AGPLv3" }
authors = [{ name = "Leonardo Borges", email = "leonardoborges6947@gmail.com" }]
keywords = [
    "lgpd", "privacy", "pii", "masking", "anonymization",
    "polars", "pandas", "data-privacy", "gdpr", "lgs",
    "aes-256", "encryption", "hmac", "pseudonymization",
    "data-quality", "k-anonymity", "differential-privacy",
    "compliance", "brasil", "cpf", "cnpj",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
    "Natural Language :: Portuguese (Brazilian)",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Framework :: Jupyter",
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "cryptography>=41.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
excel     = ["openpyxl>=3.1.0"]
synthetic = ["ctgan>=0.9.0", "faker>=18.0.0", "scikit-learn>=1.3.0"]
sql       = ["duckdb>=0.10.0", "sqlalchemy>=2.0.0"]
full = [
    "openpyxl>=3.1.0",
    "duckdb>=0.10.0",
    "sqlalchemy>=2.0.0",
    "ctgan>=0.9.0",
    "faker>=18.0.0",
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.scripts]
datalock = "datalock.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["datalock*"]

[tool.setuptools.package-data]
datalock = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
