[project.urls]
Homepage      = "https://github.com/py-datalock/datalock"
Documentation = "https://github.com/py-datalock/datalock#readme"
Changelog     = "https://github.com/py-datalock/datalock/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/py-datalock/datalock"

[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name        = "datalock"
version     = "1.1.2"
description = "Formato .dlk: armazenamento criptografado com AES-256-GCM, HKDF, Canary Data e conformidade LGPD para ciência de dados em Python."
readme      = "README.md"
license     = { text = "GNU AGPLv3" }
authors     = [{ name = "Leonardo Borges", email = "leonardoborges6947@gmail.com" }]

keywords = [
    # Segurança e criptografia
    "aes-256-gcm", "chacha20-poly1305", "hkdf", "hmac", "encryption",
    "authenticated-encryption", "aead", "arrow-ipc",
    # Privacidade e conformidade
    "lgpd", "gdpr", "privacy", "pii", "pseudonymization", "anonymization",
    "privacy-by-design", "data-privacy", "compliance",
    # Identificadores brasileiros
    "brasil", "cpf", "cnpj", "cep",
    # Funcionalidades principais
    "canary-data", "watermarking", "secure-file-format", "dlk",
    "k-anonymity", "differential-privacy", "acl",
    # Ecossistema Python
    "pandas", "polars", "pyarrow", "data-science", "jupyter",
    # Mascaramento
    "masking", "data-masking", "tokenization",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Typing :: Typed",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Framework :: Jupyter",
]

requires-python = ">=3.10"

# Dependências core — todas obrigatórias para o formato .dlk funcionar
dependencies = [
    # Criptografia — AES-256-GCM, ChaCha20, HKDF, HMAC
    "cryptography>=41.0.0",
    # Serialização Arrow IPC (formato interno do .dlk v1.4+)
    "pyarrow>=14.0.0",
    # DataFrames — interface principal da biblioteca
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Polars — opcional mas acelerado quando disponível
    "polars>=1.0.0",
]

[project.optional-dependencies]

# Suporte a arquivos Excel (.xlsx)
excel = ["openpyxl>=3.1.0"]

# Geração de dados sintéticos (lg.train / lg.clone)
synthetic = [
    "ctgan>=0.9.0",
    "faker>=18.0.0",
    "scikit-learn>=1.3.0",
]

# Conectores SQL (lg.db / sql_transpiler)
sql = [
    "duckdb>=0.10.0",
    "sqlalchemy>=2.0.0",
]

# Watermarking de embeddings (canary.inject_embedding_watermark)
# numpy já é dependência core — scipy é opcional para probing avançado
ai = [
    "scipy>=1.11.0",
]

# Tudo junto
full = [
    "openpyxl>=3.1.0",
    "duckdb>=0.10.0",
    "sqlalchemy>=2.0.0",
    "ctgan>=0.9.0",
    "faker>=18.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]

# Desenvolvimento e testes
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    # Testes de performance nos experimentos do TCC
    "memory-profiler>=0.61.0",
]

[project.scripts]
datalock = "datalock.cli:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["datalock*"]

[tool.setuptools.package-data]
datalock = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version    = "3.10"
warn_return_any   = true
warn_unused_configs = true